--- a/Yelp Analysis.ipynb
+++ b/Yelp Analysis.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Pulling the data from the josn files of Yelp academic data challenge<h4>\n",
+    "<h4> Pulling the data from the json files of Yelp academic data challenge<h4>\n",
     "<li> Business josn file contains information about the variuos businesses </li>\n",
     "<li> Review json file contains information about the reviews of these businesses </li>"
    ]
